Closed
Bug 488080
Opened 17 years ago
Closed 16 years ago
Workers: Don't compile script if the worker is already canceled.
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | .2-fixed |
People
(Reporter: bent.mozilla, Assigned: bent.mozilla)
Details
(Keywords: perf)
Attachments
(1 file, 1 obsolete file)
|
4.20 KB,
patch
|
jst
:
review+
jst
:
superreview+
beltzner
:
approval1.9.2.2+
|
Details | Diff | Splinter Review |
We can avoid a little work here. Small perf improvement on bug 487465.
Attachment #372368 -
Flags: superreview?(jst)
Attachment #372368 -
Flags: review?(jst)
Comment 1•17 years ago
|
||
Comment on attachment 372368 [details] [diff] [review]
Patch
r+sr=jst
As a side note, should the methods in this class be un-inlined? A bunch are virtual, some are fairly substantial etc.
Attachment #372368 -
Flags: superreview?(jst)
Attachment #372368 -
Flags: superreview+
Attachment #372368 -
Flags: review?(jst)
Attachment #372368 -
Flags: review+
| Assignee | ||
Comment 2•16 years ago
|
||
Actually, that patch breaks the test_closeOnGC test. This is better.
Attachment #372368 -
Attachment is obsolete: true
Attachment #394122 -
Flags: superreview?(jst)
Attachment #394122 -
Flags: review?(jst)
Updated•16 years ago
|
Attachment #394122 -
Flags: superreview?(jst)
Attachment #394122 -
Flags: superreview+
Attachment #394122 -
Flags: review?(jst)
Attachment #394122 -
Flags: review+
| Assignee | ||
Comment 3•16 years ago
|
||
Pushed changeset f2a2bb94bf9a to mozilla-central.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•16 years ago
|
Attachment #394122 -
Flags: approval1.9.2?
Comment 4•16 years ago
|
||
Comment on attachment 394122 [details] [diff] [review]
Patch, v2
approval1.9.2 requests aren't currently being monitored, since we're nearing RC freeze and there are too many outstanding requests, so I'm clearing this request. Feel free to re-request approval if you are confident that it's worth drivers' time to consider whether this non-blocker needs to land for 1.9.2 at this stage.
Attachment #394122 -
Flags: approval1.9.2?
| Assignee | ||
Comment 5•16 years ago
|
||
Comment on attachment 394122 [details] [diff] [review]
Patch, v2
I'd like to put this on the branch. It fixes an easy to reproduce slowdown that can make shutdown take way longer than necessary, and it's been tested on trunk for quite a while now.
Attachment #394122 -
Flags: approval1.9.2.1?
Comment 6•16 years ago
|
||
Comment on attachment 394122 [details] [diff] [review]
Patch, v2
a1922=beltzner
Attachment #394122 -
Flags: approval1.9.2.2? → approval1.9.2.2+
| Assignee | ||
Comment 7•16 years ago
|
||
status1.9.2:
--- → .2-fixed
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•