Bug 488080 - 'Workers: Don't compile script if the worker is already canceled'. r+sr=jst