dom/src/threads/test/closeOnGC_worker.js
@@ -3,3 +3,5 @@ onclose = function() {
   xhr.open("POST", "closeOnGC_server.sjs", false);
   xhr.send();
 };
+
+postMessage("ready");
